app.css
@font-face {
  font-family: 'Cronos Pro';
  src: url('/fonts/Cronos-Pro_12459.ttf') format('truetype');
  font-weight: 400;
}

@font-face {
  font-family: 'Cronos Pro';
  src: url('/fonts/Cronos-Pro-Light_12448.ttf') format('truetype');
  font-weight: 200;
}

* {
    box-sizing: border-box;
}

html,
body {
    height: 100%;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;

    margin: 0;
    background-color: #000;
    background-image: url('/img/background.jpg');
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
}

.backgroundImage {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.UIOverlay {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: rgba(0,0,0,.25);

    opacity: 0;
    transition: ease 500ms opacity;
    pointer-events: none;
}

.UIOverlay.is-visible {
    opacity: 1;
    pointer-events: auto;
}

.UIPrompt {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 372px;
    height: 170px;
    padding: 15px 17px;
    font-family: 'Cronos Pro';
    font-weight: 200;
    font-size: 15px;
    background: url('/img/255290.png') left top -17px repeat-x,
                url('/img/255291.png') left bottom -16px repeat-x,
                url('/img/156003.png') -29px -23px no-repeat;
    border: 2px solid #000;

    opacity: 0;
    transition-delay: 100ms;
    transition-property: opacity;
    transition-duration: 150ms;
    transition-timing-function: ease;
    pointer-events: none;
}

.UIPrompt.is-visible {
    opacity: 1;
    pointer-events: auto;
}

.UIPrompt__text {
    margin-bottom: 9px;
    padding-left: 10px;
    padding-right: 10px;
    color: #fff;
}

.UIPrompt__input {
    position: relative;
    display: flex;
    margin-bottom: 10px;

    background: url('/img/255292.png') left top -5px no-repeat,
                url('/img/255293.png') left bottom -14px no-repeat;
}

.UIPrompt__input:before,
.UIPrompt__input:after {
    content: "";
    position: absolute;
    width: 1px;
    height: 22px;
    background-color: #000;
}

.UIPrompt__input:before {
    top: 1px;
    left: 0;
}

.UIPrompt__input:after {
    right: 1px;
}

.UIPrompt__input input {
    flex: 1;
    height: 23px;
    padding: 3px 7px;
    border: none;
    border-radius: 3px;
    background-color: transparent;
    font-family: 'Cronos Pro';
    font-size: 14px;
    font-weight: 200;
    color: #fff;
    outline: none;
}


.UIButton {
    min-width: 54px;
    padding: 0 12px 3px;
    border: 1px solid #000;
    border-radius: 1px;
    background-color: #ccc7b2;
    margin-right: 7px;
    font-size: 13px;
    font-weight: normal;
    letter-spacing: -1px;
    outline: none;

    box-shadow: 1px 1px 3px rgba(0,0,0,.7),
                2px 0 3px rgba(202,199,176,.15),
                inset 1px 0px 1px rgba(0,0,0,.8);
}

.UIButton[disabled] {
    color: #454545;
    background-color: #7a7a7a;
    border: 0;
    box-shadow: 2px 0 3px rgba(202,199,176,.05),
                inset 1px 0px 1px rgba(0,0,0,.6);
}

.inventoryContainer {
    position: absolute;
    top: 0;
    left: 0;
    width: 1920px;
    height: 1080px;
    transform-origin: 0 0;
}

.inventory {
    display: inline-block;
    transform: translate(315px, 197px);
    /*top: 197px;
    left: 315px;*/
    font-size: 0;
}

.inventory__inner {
}

.inventory__cell {
    display: inline-block;
    width: 52px;
    height: 52px;
    margin-right: 5px;
    margin-bottom: 5px;
    border: 1px solid transparent;
}

.inventory__cell:last-child {
    margin-right: 0;
}

.inventory__row:last-child .inventory__cell {
    margin-bottom: 0;
}

.legendary {
    width: 52px;
    height: 52px;
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    cursor: default;
}

.legendary.m--frenzy {
    background-image: url('/img/Frenzy_(weapon).png');
}

.legendary.m--meteorlogicus {
    background-image: url('/img/Meteorlogicus.png');
}

.legendary.m--the_juggernaut {
    background-image: url('/img/The_Juggernaut.png');
}

.legendary.m--frostfang {
    background-image: url('/img/Frostfang.png');
}

.legendary.m--quip {
    background-image: url('/img/Quip.png');
}

.legendary.m--the_minstrel {
    background-image: url('/img/The_Minstrel.png');
}

.legendary.m--howler {
    background-image: url('/img/Howler.png');
}

.legendary.m--rodgort {
    background-image: url('/img/Rodgort.png');
}

.legendary.m--the_moot {
    background-image: url('/img/The_Moot.png');
}

.legendary.m--incinerator {
    background-image: url('/img/Incinerator.png');
}

.legendary.m--sunrise {
    background-image: url('/img/Sunrise.png');
}

.legendary.m--the_predator {
    background-image: url('/img/The_Predator.png');
}

.legendary.m--kamohoalii_kotaki {
    background-image: url('/img/Kamohoali\'i_Kotaki.png');
}

.legendary.m--the_bifrost {
    background-image: url('/img/The_Bifrost.png');
}

.legendary.m--twilight {
    background-image: url('/img/Twilight.png');
}

.legendary.m--bolt {
    background-image: url('/img/Bolt.png');
}

.legendary.m--kraitkin {
    background-image: url('/img/Kraitkin.png');
}

.legendary.m--the_dreamer {
    background-image: url('/img/The_Dreamer.png');
}

.legendary.m--eternity {
    background-image: url('/img/Eternity.png');
}

.legendary.m--kudzu {
    background-image: url('/img/Kudzu.png');
}

.legendary.m--the_flameseeker_prophecies {
    background-image: url('/img/The_Flameseeker_Prophecies.png');
}

